# date-calculator-htmx

./: .env-sample  .env.sample  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOPMENT_PROGRESS.md  Dockerfile  Dockerfile.dev  Dockerfile.monorepo  FEATURE-NEW-SALES-DATA-QUERY.md  README.md  docker-compose.yml  eslint.config.js  hello.py  merge-frontend-subtree.sh  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  sales_data.db  tailwind.config.js  tasks.md  tsconfig.json  tstype.ts  vite.config.ts
.claude/: settings.local.json
.cursor/rules/: my-custom-rule.mdc
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: branch-build.yml  bun-ci.yml  stage-build.yml
app/: __init__.py  main.py  models.py  session.py
docs/: PROJECT_COMPONENTS_ANALYSIS.md  REACT_RENDER_LOOP.md  README_SUPABASE.md  SUPABASE_SETUP.md  breed_exporter_flow.md  breed_exproter_call.md  breeds_processor_flow.md  component-refactor-guide.md  cursor_guide.md  openapi.json  sales_processor_flow.md  sales_processor_methods.md  structure.md
frontend/: .env.sample  Dockerfile  README.md  check.sh  docker-compose.yml  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/.github/workflows/: bun-ci.yml
frontend/docs/: CI_CD_BUN.md  COMPONENT_CLEANUP_TASKS.md  REACT_RENDER_LOOP.md  README_SUPABASE.md  REFACTOR.md  SUPABASE_FIXES.md  SUPABASE_REALTIME.md  SUPABASE_SETUP.md  SUPABASE_TYPES.md  todo.md  todo_prompt.md
frontend/hooks/: pre-commit  pre-push  setup.js
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/hooks/: use-toast.ts  useSortedBatchAggregates.ts
frontend/src/lib/: apiClient.ts  apis.ts  supabaseClient.ts  todoistApis.ts
frontend/src/pages/: HomePage.tsx  NotFoundPage.tsx  ReportsPage.tsx  SettingsPage.tsx  TestingPage.tsx
frontend/src/router/: index.tsx
frontend/src/stores/: batchStore.ts
frontend/src/types/: business.types.ts  constants.ts  database.types.ts  date.types.ts
frontend/src/utils/: batchCalculations.ts  featureFlags.ts
hooks/: post-merge
migrations/: env.py
migrations/versions/: b54500008935_遷移到新orm架構.py
nginx/: fasthtml-dev.conf
scripts/: test_sales_trend.py
src/: .env-sample  App.tsx  api.py  core_models.py  data_queries.py  db_init.py  event_bus.py  index.css  log_config.json  main.py  sales_records_importer.py  test_script.py  test_server.py  upload_handlers.py
src/api/: main.py
src/api/core/: dependencies.py  event_bus.py
src/api/dependencies/: api_dependency.py
src/api/models/: response.py
src/api/repositories/: sale_repository.py
src/api/routers/: upload.py
src/cleansales_backend/: __init__.py  help.md  test_proxy.py  test_supabase.py  test_todoist.py
src/cleansales_backend/api/: __init__.py  __main__.py  app.py  dev.py
src/cleansales_backend/cli/: __init__.py
src/cleansales_backend/commands/: upload_commands.py
src/cleansales_backend/core/: __init__.py  config.py  database.py  db_monitor.py  db_optimizations.py  event_bus.py  events.py  process_executor.py  telegram_notifier.py
src/cleansales_backend/database/: init.py
src/cleansales_backend/domain/: utils.py
src/cleansales_backend/event_bus/: __init__.py  event_bus.py  events.py
src/cleansales_backend/eventbus/: events.py
src/cleansales_backend/exporters/: __init__.py  breed_exporter.py  excel_exporter.py  exporter_interface.py  orm_models.py
src/cleansales_backend/handlers/: models.py  upload_handler.py
src/cleansales_backend/mcp/: __init__.py  batch_tools.py  server.py
src/cleansales_backend/processors/: __init__.py  breeds_processor.py  breeds_schema.py  feeds_schema.py  sales_processor.py  sales_schema.py
src/cleansales_backend/queries/: data_queries.py
src/cleansales_backend/repositories/: breed_repository.py  sale_repository.py
src/cleansales_backend/services/: __init__.py  cleansales_service.py  query_service.py
src/cleansales_backend/web/: __init__.py  batch_route_v2.py  batches_route.py  breed_form_route.py  data_service.py  date_calculator.py  file_upload_handler.py  main.py  resources.py  sales_route.py
src/cleansales_refactor/: __init__.py  __main__.py  cleansales_domain_service.py  cleansales_service.py
src/cleansales_refactor/api/: __init__.py  app.py
src/cleansales_refactor/cli/: __init__.py  cli_service.py
src/cleansales_refactor/core/: __init__.py  config.py  database.py  event_bus.py
src/cleansales_refactor/exporters/: __init__.py  base_sqlite_exporter.py  breed_exporter.py  database.py  excel_exporter.py  exporter_interface.py  orm_models.py  sales_exporter.py  sqlite_exporter.py
src/cleansales_refactor/mcp/: __init__.py  server.py
src/cleansales_refactor/models/: __init__.py  breed_record.py  (+3 more)
src/contexts/: NotificationContext.tsx
src/fastapi/: app.py
src/hooks/: useBatchAggregateQueries.ts  useBatchDetailsQueries.ts  useBatchesData.ts  useBreedRecordsWithAggregates.ts  useFetchBatches.ts
src/lib/: react-query.ts  supabaseClient.ts
src/pages/: HomePage.tsx  NotFoundPage.tsx  ReportsPage.tsx  SettingsPage.tsx
src/router/: index.tsx
src/server/: api_route.py  batches_route.py  config.py  date_calculator_route.py  main.py  sales_route.py  test_main.py  todoist_service.py  upload_route.py
src/static/: index.html
src/types/: business.types.ts  database.types.ts  index.ts
src/utils/: batchCalculations.ts  dateUtils.ts  featureFlags.ts  formatUtils.ts
supabase/: config.toml
tailwildcss/: input.css  package-lock.json  package.json
templates/date_calculator/: form.html  form_content.html  index.html  interval_result_card.html  result_card.html  result_cards.html  result_row.html  result_table.html
tests/: TEST_STATUS.md  __init__.py  test_mcp_server.py
tests/api/: __init__.py  test_root_endpoint.py
tests/commands/: test_upload_commands.py
tests/handlers/: test_upload_handler.py
tests/processor/: __init__.py  test_sale_record_processor.py
tests/queries/: test_data_queries.py
tests/sql/: README.md  conftest.py  test_batch_summary.py  test_count_data_query.py  test_runner.py  test_sales_query.py
(+280 files in other folders)
