[project]
name = "cleansales-backend"
version = "0.1.1"
description = "Add your description here"
# readme = "README.md"
authors = [
    { name = "Pierre Wu", email = "gurumfj@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "openpyxl>=3.1.5",
    "sqlmodel>=0.0.22",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
    "pydantic-settings>=2.8.1",
    "mcp[cli]>=1.3.0",
    "tabulate>=0.9.0",
    "wcwidth>=0.2.13",
    "python-json-logger>=2.0.7",
    "psycopg2-binary>=2.9.10",
    "supabase>=2.15.0",
    "todoist-api-python>=2.1.7",
]

[dependency-groups]
dev = [
    "types-requests>=2.32.0.20241016",
    "pandas-stubs>=2.2.0.230",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    "types-tabulate>=0.9.0.20241207",
    "pre-commit>=4.2.0",
    "rich>=14.0.0",
    "alembic>=1.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cleansales_backend"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
cleansales = "cleansales_backend.cli:main"
cleansales-api-dev = "cleansales_backend.api.dev:main"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_return_any = false

disable_error_code = ["prop-decorator", "misc"]

[[tool.mypy.overrides]]
module = ["pydantic.*", "fastapi.*", "sqlmodel.*", "sqlalchemy.*", "uvicorn.*", "pandas.*", "requests.*", "mcp.*", "wcwidth.*", "pydantic_settings.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 4
fix = true
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
]
fixable = ["ALL"]
# extend-select = ["E501"]
ignore = ["E501"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# [tool.ruff.format]

[tool.basedpyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
defineConstant = { DEBUG = true }
pythonVersion = "3.12"
pythonPlatform = "macOS"
typeCheckingMode = "basedpyright"
reportAny = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportCallInDefaultInitializer = false
reportExplicitAny = false
