[project]
name = "cleansales-backend"
version = "0.1.1"
description = "Add your description here"
# readme = "README.md"
authors = [
    { name = "Pierre Wu", email = "gurumfj@gmail.com" }
]
requires-python = ">=3.13"

dependencies = [
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "sqlmodel>=0.0.22",
    "fastapi>=0.110.0",
    "mcp[cli]>=1.3.0",
    "tabulate>=0.9.0",
    "wcwidth>=0.2.13",
    "python-json-logger>=2.0.7",
    "psycopg2-binary>=2.9.10",
    "supabase>=2.15.0",
    "todoist-api-python>=3.0.0",
    "python-fasthtml>=0.12.18",
    "pytz>=2025.2",
    "python-multipart>=0.0.6",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.6",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cleansales_backend"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
cleansales = "cleansales_backend.cli:main"
api = "cleansales_backend.api.dev:main"
web = "cleansales_backend.web.main:main"
upload-handler = "cleansales_backend.web.file_upload_handler:main"
dev = "server.main:main"

[project.entry-points."uv.run"]
cleansales = "cleansales_backend.cli:main"
api = "cleansales_backend.api.dev:main"
web = "cleansales_backend.web.main:main"
upload-handler = "cleansales_backend.web.file_upload_handler:main"
dev = "server.main:main"

[tool.mypy]
python_version = "3.13"
strict = true
mypy_path = ["src"]
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disable_error_code = ["prop-decorator", "misc", "name-defined"]
# exclude = ["src/cleansales_backend/web"]

[[tool.mypy.overrides]]
module = ["pydantic.*", "fastapi.*", "sqlmodel.*", "sqlalchemy.*", "uvicorn.*", "pandas.*", "requests.*", "mcp.*", "wcwidth.*", "pydantic_settings.*", "fasthtml.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4
fix = true
exclude = [
    # "src/cleansales_backend/web",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
]
fixable = ["ALL"]
# extend-select = ["E501"]
ignore = ["E501", "F405", "F403", "E731"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# [tool.ruff.format]

[tool.basedpyright]
include = ["src"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
defineConstant = { DEBUG = true }
pythonVersion = "3.13"
pythonPlatform = "macOS"
typeCheckingMode = "basedpyright"
reportAny = false
reportMissingTypeStubs = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportCallInDefaultInitializer = false
reportExplicitAny = false

[dependency-groups]
dev = [
    "types-pytz>=2025.2.0.20250326",
    "types-requests>=2.32.0.20241016",
    "pandas-stubs>=2.2.0.230",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.15.0",
    "ruff>=0.9.6",
    "types-tabulate>=0.9.0.20241207",
    "rich>=14.0.0",
    "alembic>=1.15.2",
]
