[project]
name = "date-calculator-api"
version = "1.0.0"
description = "A simple date calculator API with interval and calculation features"
readme = "README.md"
authors = [
    { name = "Pierre Wu", email = "gurumfj@gmail.com" }
]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "itsdangerous>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.scripts]
dev = "app.main:main"
start = "app.main:main"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = ["app"]
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pydantic.*", "fastapi.*", "uvicorn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = [
    "app",
]
testpaths = [
    "tests",
]

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4
fix = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
]
fixable = ["ALL"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]